# oleo

./: .gitignore  ANNOUNCE  AUTHORS  BUGS  ChangeLog  EIGHTBIT  FAQ  INSTALL.OLEO  KEYS  Makefile.am  Makefile.in  NEWS  README  README-alpha  THANKS  TODO  _doprnt.c  acconfig.h  aclocal.m4  args.c  basic.c  busi.c  byte-compile.c  cmd.c  cmd.h  config.h.in  configure  configure.ac  configure.in  date.c  decompile.c  display.c  eval.c  font.c  forminfo.c  ftp.alpha  ftp.dist  ftp.gnudist  funcs.c  funcs.h  (+39 more)
Xresources/: Makefile.am  Oleo.en  Oleo.fr  Oleo.nl
afm/: Makefile  Makefile.am  Makefile.in
doc/: .gitignore  Makefile.am  Makefile.in  basics.texi  bugs.texi  cell-refs.texi  dbms.texi  entering-data.texi  expressions.texi  functions.texi  interface.texi  keymaps.texi  making-changes.texi  motif.texi  oleo.html  oleo.texi  oleo_web.html  options.texi  print-plot.texi  programs.texi  style.texi  texi2html  texi2html.in  windows.texi
examples/: Makefile.am  mysql.oleo
intl/: .gitignore  Makefile.am  Makefile.in
lib/: .gitignore  Makefile.am  Makefile.in  ansi2knr.c  error.c  getdate.c  getdate.h  getdate.y  mktime.c  xmalloc.c
m4/: Makefile.am  Makefile.in  ac_find_xlt.m4  emx.m4  gettext.m4  motif.m4  sciplot.m4  x11.m4  xbae.m4  xlt.m4  xmhtml.m4  xp.m4
po/: .gitignore  POTFILES.in  en.po  fr.po  nl.po  oleo.pot
src/: .gitignore  Makefile.am  Makefile.in  afm.c  afm.h  appres.c  appres.h  args.c  args.h  basic.c  basic.h  busi.c  byte-compile.c  byte-compile.h  cell.h  cells.c  cmd.c  cmd.h  date.c  decompile.c  decompile.h  defun.h  defuns.h  display.c  display.h  epson.c  epson.h  errors.h  eval.c  eval.h  fallback.c  fallback.h  font.c  font.h  format.c  format.h  forminfo.c  forminfo.h  funcdef.h  funcs.c  (+98 more)
