#
# $Header: /home/matt/cvs/oleo/oleo/afm/Makefile.am,v 1.1 1999/10/23 13:39:33 danny Exp $
#
# Process this file with automake to produce Makefile.in
#

afmdir=		$(prefix)/share/afm

afm_DATA =	Courier-Bold.afm Courier-BoldOblique.afm \
		Courier-Oblique.afm Courier.afm \
		Helvetica-Bold.afm Helvetica-BoldOblique.afm \
		Helvetica-Oblique.afm Helvetica.afm \
		Symbol.afm \
		Times-Bold.afm Times-BoldItalic.afm \
		Times-Italic.afm Times-Roman.afm
