#
# $Header: /home/matt/cvs/oleo/oleo/afm/Makefile.am,v 1.4 2000/02/22 23:44:18 danny Exp $
#
# Process this file with automake to produce Makefile.in
#

afmdir=		$(prefix)/share/afm

afm_DATA =	Courier-Bold.afm Courier-BoldOblique.afm \
		Courier-Oblique.afm Courier.afm \
		Helvetica-Bold.afm Helvetica-BoldOblique.afm \
		Helvetica-Oblique.afm Helvetica.afm \
		Symbol.afm \
		Times-Bold.afm Times-BoldItalic.afm \
		Times-Italic.afm Times-Roman.afm

EXTRA_DIST=	$(afm_DATA)
