#
# $Header: /home/matt/cvs/oleo/oleo/examples/Makefile.am,v 1.7 2000/02/22 23:44:18 danny Exp $
#
# Process this file with automake to produce Makefile.in -*- Makefile -*-
#
EXTRA_DIST = nogood.oleo plot.oleo shit.oleo xy.oleo types.oleo \
	q110399.csv loop.oleo formula.sylk paine.slk \
	create_koers.txt data.sql mysql.oleo
