#
# $Header: /home/matt/cvs/oleo/oleo/examples/Makefile.am,v 1.8 2000/08/10 21:02:49 danny Exp $
#
# Process this file with automake to produce Makefile.in -*- Makefile -*-
#
EXTRA_DIST = nogood.oleo plot.oleo shit.oleo xy.oleo types.oleo \
	q110399.csv loop.oleo formula.sylk paine.slk \
	create_koers.txt data.sql mysql.oleo \
	docs.oleo
