#
# $Header: /home/matt/cvs/oleo/oleo/m4/Makefile.am,v 1.5 1999/01/27 20:32:53 danny Exp $
#
# Process this file with automake to produce Makefile.in -*- Makefile -*-
#
#EXTRA_DIST = gettext.m4 lcmessage.m4 progtest.m4 \
#		motif.m4 sciplot.m4 xmhtml.m4 xbae.m4
#
EXTRA_DIST = motif.m4 sciplot.m4 xmhtml.m4 xbae.m4
